# project-black-tape

./: .gitignore  AGENTS.md  CNAME  DEV_PLAN.md  GEMINI.md  PROJECT_CONTEXT.md  README.md  app.py  gunicorn.conf.py  pyproject.toml  render.yaml  repoconsolidator.py  requirements.txt  run.py  server.py
core/: base_exporter.py  base_processor.py  base_scanner.py  orchestrator.py  search_engine.py
display/: chat_viewer.py
exporters/: json_exporter.py
fixtures/: README.md
ingesters/: zip_ingestor.py
processors/: chat_organizer.py  gps_writer.py
scanners/: chat_scanner.py  gps_scanner.py  scanner.py
src/black_tape_engine/: __init__.py  engine.py
src/black_tape_engine/legacy_core/: base_ingestor.py  data_aligner.py  orchestrator.py
src/black_tape_engine/legacy_display/: chat_viewer.py
src/black_tape_engine/legacy_exporters/: json_exporter.py
src/black_tape_engine/legacy_ingesters/: json_ingestor.py  zip_ingestor.py
src/black_tape_engine/legacy_processors/: gps_writer.py
src/black_tape_engine/legacy_scanners/: chat_scanner.py  friends_scanner.py  google_signal_scanner.py  gps_scanner.py  scanner.py
src/black_tape_web/: __init__.py
src/black_tape_web/blueprints/: api.py  ui.py
src/black_tape_web/services/: vault_service.py
src/black_tape_web/static/css/: style.css  (+1 more)
src/black_tape_web/templates/: layout.html  welcome.html
static/css/: style.css
static/css/pages/: chat.css  home.css
static/js/: chat.js  main.js  map.js
templates/: layout.html  welcome.html
templates/pages/: chat.html  home.html  map.html
tests/: test_app.py
(+23 files in other folders)
