[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "black-tape-overhaul"
version = "0.1.0"
description = "Overhaul workspace for a hosted Black-Tape engine and web app split."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4==4.14.3",
  "diskcache==5.6.3",
  "flask==3.1.3",
  "google-re2==1.1.20251105",
  "gunicorn==25.3.0",
  "lxml==6.0.2",
  "pydantic==2.12.5",
  "python-dotenv==1.2.2",
  "requests==2.33.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
